Proper image routes

--- a/snippets/changelog/2025-04-28.html
+++ b/snippets/changelog/2025-04-28.html
@@ -42,7 +42,7 @@
                   <li><strong>Improved Data Clarity and Layout</strong></li>
                 </ul>
                 <div style="text-align: center; margin: 10px 0">
-                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-04-28_new-analytics-page.png" alt="New Analytics Page" style="max-width: 100%; height: auto; border-radius: 8px" />
+                  <img src="/images/changelog/2025-04-28_new-analytics-page.png" alt="New Analytics Page" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
                 <blockquote style="color: #666; font-style: italic; font-size: 14px; margin-top: 10px">And with monitoring active, you can see production evaluation results in real time on this page!</blockquote>
 
@@ -56,7 +56,7 @@
                   <li><strong>Smart Table Sorting:</strong> Automatically disables default sorting when custom sorting is applied.</li>
                 </ul>
                 <div style="text-align: center; margin: 10px 0">
-                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-04-28_additional-filters.png" alt="Additional Filters" style="max-width: 100%; height: auto; border-radius: 8px" />
+                  <img src="/images/changelog/2025-04-28_additional-filters.png" alt="Additional Filters" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
                 <br />
