--- a/snippets/changelog/2025-05-05.html
+++ b/snippets/changelog/2025-05-05.html
@@ -29,7 +29,7 @@
                   <li><strong>Graph Tooltips:</strong> Hover to reveal truncated names inside charts.</li>
                 </ul>
                 <div style="text-align: center; margin: 10px 0">
-                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-05-05_radar-view.png" alt="Radar View" style="max-width: 100%; height: auto; border-radius: 8px" />
+                  <img src="/images/changelog/2025-05-05_radar-view.png" alt="Radar View" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
                 <br />
