--- a/snippets/changelog/2025-05-12.html
+++ b/snippets/changelog/2025-05-12.html
@@ -23,7 +23,7 @@
                 <br />
                 <h3 style="color: #333">New Conversation Evaluation Metrics</h3>
                 <p style="color: #444; font-size: 16px">
-                  You can now evaluate conversations with greater precision using these new metrics:
+                  You can now <a href="https://docs.galtea.ai/sdk/examples/monitor-production-responses-to-user-queries#evaluating-conversations" style="color: #5c5bdd; text-decoration: underline">evaluate conversations</a> with greater precision using these new metrics:
                 </p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Role Adherence</strong> - Assess how well an AI stays within its defined role</li>
@@ -34,9 +34,7 @@
 
                 <br />
                 <h3 style="color: #333">Enhanced Security Framework</h3>
-                <p style="color: #444; font-size: 16px">
-                  We've significantly improved user access management by implementing an <strong>Attribute-Based Access Control (ABAC)</strong> strategy, providing more granular control over who can access what within your organization.
-                </p>
+                <p style="color: #444; font-size: 16px">We've significantly improved user access management by implementing an <strong>Attribute-Based Access Control (ABAC)</strong> strategy, providing more granular control over who can access what within your organization.</p>
 
                 <br />
                 <h3 style="color: #333">Extended Data Generation Capabilities</h3>
@@ -48,9 +46,7 @@
 
                 <br />
                 <h3 style="color: #333">Improved Test Creation Experience</h3>
-                <p style="color: #444; font-size: 16px">
-                  We've enhanced the clarity of threat selection in the Test Creation form. The selection now displays both the threat and which security frameworks that threat covers, making it easier to align your testing with specific security standards.
-                </p>
+                <p style="color: #444; font-size: 16px">We've enhanced the clarity of threat selection in the Test Creation form. The selection now displays both the threat and which security frameworks that threat covers, making it easier to align your testing with specific security standards.</p>
                 <div style="text-align: center; margin: 10px 0">
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-05-12_improved_threat_selection.png" alt="Improved Threat Selection" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
