Fixed typo: "Conversational" to "Conversation" metrics to adhere to production metrics

--- a/snippets/changelog/2025-05-12.html
+++ b/snippets/changelog/2025-05-12.html
@@ -28,7 +28,7 @@
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Role Adherence</strong> - Assess how well an AI stays within its defined role</li>
                   <li><strong>Knowledge Retention</strong> - Measure how effectively information is remembered throughout a conversation</li>
-                  <li><strong>Conversational Completeness</strong> - Evaluate whether all user queries were fully addressed</li>
+                  <li><strong>Conversation Completeness</strong> - Evaluate whether all user queries were fully addressed</li>
                   <li><strong>Conversation Relevancy</strong> - Determine if responses remain on-topic and purposeful</li>
                 </ul>
 
