added qa improve

--- a/snippets/changelog/2025-06-23.html
+++ b/snippets/changelog/2025-06-23.html
@@ -43,13 +43,17 @@
                   <li><strong>Security Boundaries:</strong> Define the security scope and constraints.</li>
                 </ul>
                 <p style="color: #444; font-size: 16px">
-                  These additions help you document and communicate your product’s strengths and boundaries more clearly.
+                  These additions help you document and communicate your product's strengths and boundaries more clearly.
                   <a href="https://docs.galtea.ai/concepts/product" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">Read about product details</a>
                 </p>
 
                 <br />
+                <h3 style="color: #333">Improved Q&A Generation</h3>
+                <p style="color: #444; font-size: 16px">Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.</p>
+
+                <br />
                 <h3 style="color: #333">General Improvements</h3>
-                <p style="color: #444; font-size: 16px">We’ve made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.</p>
+                <p style="color: #444; font-size: 16px">We've made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.</p>
 
                 <br />
                 <p style="color: #444; font-size: 16px">Enjoy the improvements!</p>
@@ -58,7 +62,7 @@
                 <hr style="margin-top: 40px; width: 20%; border: 1px solid #d1d3db" />
 
                 <h3 style="color: #333; margin-top: 40px">Coming Next</h3>
-                <p style="color: #444; font-size: 16px">We’re not stopping here! Soon you’ll see:</p>
+                <p style="color: #444; font-size: 16px">We're not stopping here! Soon you'll see:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>New custom metrics from Galtea</strong> specialized to cover your needs</li>
                   <li><strong>Custom prompts for test cases generation</strong></li>
