add production description guide
add product description guide

--- a/snippets/changelog/2025-06-23.html
+++ b/snippets/changelog/2025-06-23.html
@@ -46,10 +46,17 @@
                   These additions help you document and communicate your product's strengths and boundaries more clearly.
                   <a href="https://docs.galtea.ai/concepts/product" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">Read about product details</a>
                 </p>
-
+            
                 <br />
                 <h3 style="color: #333">Improved Q&A Generation</h3>
                 <p style="color: #444; font-size: 16px">Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.</p>
+                
+                <br />
+                <h3 style="color: #333">New Guide: Setting Up Your Product Description</h3>
+                <p style="color: #444; font-size: 16px">We've created a comprehensive guide to help you set up your product descriptions effectively. This guide covers best practices, examples, and tips to ensure your product is presented in the best light.</p>
+                <p style="color: #444; font-size: 16px">
+                  <a href="https://docs.galtea.ai/sdk/examples/create-product-description" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">Read the guide</a>
+                </p>
 
                 <br />
                 <h3 style="color: #333">General Improvements</h3>
