--- a/snippets/changelog/2025-07-04.html
+++ b/snippets/changelog/2025-07-04.html
@@ -38,8 +38,9 @@
                 <br />
                 <h3 style="color: #333">Introducing the Misuse Resilience Metric</h3>
                 <p style="color: #444; font-size: 16px">
-                  A new Red Teaming <a href="https://docs.galtea.ai/concepts/metric-type" style="color: #5c5bdd">metric</a>, <strong>Misuse Resilience</strong>, is now available. It evaluates your product's ability to refuse requests that are outside its intended scope, even if they aren't
-                  explicitly harmful.
+                  A new Red Teaming metric, <strong><a href="https://docs.galtea.ai/concepts/metric-type/misuse-resilience" style="color: #5c5bdd">Misuse Resilience</a></strong
+                  >, is now available. It evaluates if your product's responses stay aligned with its <a href="https://docs.galtea.ai/concepts/product" style="color: #5c5bdd">product description</a>, even when facing adversarial inputs or out-of-scope requests. This helps ensure your AI stays
+                  on-task and doesn't get diverted into performing unintended actions.
                 </p>
 
                 <br />
