Standardize apostrophe usage in documentation
Replaced curly apostrophes with straight apostrophes across metric concept files and changelog snippets for consistency and improved compatibility. No content or meaning was changed.

--- a/snippets/changelog/2025-04-28.html
+++ b/snippets/changelog/2025-04-28.html
@@ -30,7 +30,7 @@
                 <br />
                 <h3 style="color: #333">Improved Galtea Red Teaming Tests</h3>
                 <p style="color: #444; font-size: 16px">
-                  Our simulation-generated tests have been upgraded—delivering higher-quality outcomes. Red teaming tests can now validate more specific aspects of standards such as OWASP, MITRE ATLAS, and NIST. We’ve improved <strong>jailbreak</strong> attacks, and added new
+                  Our simulation-generated tests have been upgraded—delivering higher-quality outcomes. Red teaming tests can now validate more specific aspects of standards such as OWASP, MITRE ATLAS, and NIST. We've improved <strong>jailbreak</strong> attacks, and added new
                   <strong>financial attacks</strong> and <strong>toxicity</strong> prompts.
                 </p>
 
@@ -48,7 +48,7 @@
 
                 <br />
                 <h3 style="color: #333">User Experience Enhancements</h3>
-                <p style="color: #444; font-size: 16px">We’re continuously refining the platform based on your feedback. This week’s improvements include:</p>
+                <p style="color: #444; font-size: 16px">We're continuously refining the platform based on your feedback. This week's improvements include:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Customizable Evaluation Tasks List:</strong> Show only the metrics you need.</li>
                   <li><strong>Enhanced Evaluation List Filtering:</strong> Filter by versions, evaluations, tests, and test groups.</li>
@@ -66,7 +66,7 @@
                 <hr style="margin-top: 40px; width: 20%; border: 1px solid #d1d3db" />
 
                 <h3 style="color: #333; margin-top: 40px">Coming Next</h3>
-                <p style="color: #444; font-size: 16px">We’re not stopping here! Soon you’ll see new capabilities on the analytics page:</p>
+                <p style="color: #444; font-size: 16px">We're not stopping here! Soon you'll see new capabilities on the analytics page:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Radar View:</strong> A visual comparison of metrics to quickly assess model performance.</li>
                   <li><strong>Time Frame Filtering:</strong> Filter analytics data by date ranges to track progress over time.</li>
