--- a/snippets/changelog/2025-05-05.html
+++ b/snippets/changelog/2025-05-05.html
@@ -63,12 +63,12 @@
 
                 <br />
                 <p style="color: #444; font-size: 16px">We hope these upgrades make your experience better and more efficient.</p>
-                <p style="color: #444; font-size: 16px"><strong>We’d love your feedback</strong> — reply to this email or reach out via Slack/Discord.</p>
+                <p style="color: #444; font-size: 16px"><strong>We'd love your feedback</strong> — reply to this email or reach out via Slack/Discord.</p>
 
                 <hr style="margin-top: 40px; width: 20%; border: 1px solid #d1d3db" />
 
                 <h3 style="color: #333; margin-top: 40px">Coming Next</h3>
-                <p style="color: #444; font-size: 16px">Here’s what we’re working on next:</p>
+                <p style="color: #444; font-size: 16px">Here's what we're working on next:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Better attack strategies for red teaming:</strong> Red teaming tests will not only generate the threats to attack the product, but also vary the attacks to break the defenses and guardrails of the product, such as converting the prompt to base64, or to math questions.</li>
                   <li><strong>Richer tests cases for quality assessment:</strong> Quality tests will generate harder to answer questions with richer answers that can connect multiple contexts.</li>
