--- a/snippets/changelog/2025-07-07.html
+++ b/snippets/changelog/2025-07-07.html
@@ -57,7 +57,7 @@
                 <hr style="margin-top: 40px; width: 20%; border: 1px solid #d1d3db" />
 
                 <h3 style="color: #333; margin-top: 40px">Coming Next</h3>
-                <p style="color: #444; font-size: 16px">Here’s a sneak peek at what we’re working on:</p>
+                <p style="color: #444; font-size: 16px">Here's a sneak peek at what we're working on:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li>New Galtea-managed metrics to cover even more evaluation needs.</li>
                   <li>Data versioning for test cases to ensure full traceability of annotations.</li>
