Update changelogs email
Removes 'alt' attribute from logo images from HTML files.

--- a/snippets/changelog/2025-05-05.html
+++ b/snippets/changelog/2025-05-05.html
@@ -14,7 +14,7 @@
               <td>
                 <div style="text-align: center; margin-top: 20px">
                   <a href="https://galtea.ai" target="_blank">
-                    <img src="https://galtea.ai/img/galteaLogo.png" alt="Galtea Logo" style="width: 100px; height: auto" />
+                    <img src="https://galtea.ai/img/galteaLogo.png" style="width: 100px; height: auto" />
                   </a>
                 </div>
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Analytics Upgrades and Red Teaming Test Improvements</h1>
@@ -70,7 +70,9 @@
                 <h3 style="color: #333; margin-top: 40px">Coming Next</h3>
                 <p style="color: #444; font-size: 16px">Here's what we're working on next:</p>
                 <ul style="color: #444; font-size: 16px">
-                  <li><strong>Better attack strategies for red teaming:</strong> Red teaming tests will not only generate the threats to attack the product, but also vary the attacks to break the defenses and guardrails of the product, such as converting the prompt to base64, or to math questions.</li>
+                  <li>
+                    <strong>Better attack strategies for red teaming:</strong> Red teaming tests will not only generate the threats to attack the product, but also vary the attacks to break the defenses and guardrails of the product, such as converting the prompt to base64, or to math questions.
+                  </li>
                   <li><strong>Richer tests cases for quality assessment:</strong> Quality tests will generate harder to answer questions with richer answers that can connect multiple contexts.</li>
                   <li><strong>More Robust Permissions:</strong> A redesigned and more secure permission system is in the works.</li>
                   <li><strong>More Filter Improvements:</strong> We're continuing to refine filters to improve your analytics workflow.</li>
