--- a/snippets/changelog/2025-06-02.html
+++ b/snippets/changelog/2025-06-02.html
@@ -14,7 +14,7 @@
               <td>
                 <div style="text-align: center; margin-top: 20px">
                   <a href="https://galtea.ai" target="_blank">
-                    <img src="https://galtea.ai/img/galteaLogo.png" alt="Galtea Logo" style="width: 100px; height: auto" />
+                    <img src="https://galtea.ai/img/galteaLogo.png" style="width: 100px; height: auto" />
                   </a>
                 </div>
 
