--- a/snippets/changelog/2025-06-23.html
+++ b/snippets/changelog/2025-06-23.html
@@ -14,7 +14,7 @@
               <td>
                 <div style="text-align: center; margin-top: 20px">
                   <a href="https://galtea.ai" target="_blank">
-                    <img src="https://galtea.ai/img/galteaLogo.png" alt="Galtea Logo" style="width: 100px; height: auto" />
+                    <img src="https://galtea.ai/img/galteaLogo.png" style="width: 100px; height: auto" />
                   </a>
                 </div>
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Quality Test Generation, Metric Tags, and Product Details</h1>
@@ -46,14 +46,17 @@
                   These additions help you document and communicate your product's strengths and boundaries more clearly.
                   <a href="https://docs.galtea.ai/concepts/product" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">Read about product details</a>
                 </p>
-            
+
                 <br />
                 <h3 style="color: #333">Improved Q&A Generation</h3>
                 <p style="color: #444; font-size: 16px">Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.</p>
-                
+
                 <br />
                 <h3 style="color: #333">New Guide: Setting Up Your Product Description</h3>
-                <p style="color: #444; font-size: 16px">We've created a comprehensive guide to help you set up your product descriptions effectively. This guide covers best practices, examples, and tips to ensure your product is presented in the best light. Check it out <a href="https://docs.galtea.ai/sdk/tutorials/create-product-description" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">here</a></p>
+                <p style="color: #444; font-size: 16px">
+                  We've created a comprehensive guide to help you set up your product descriptions effectively. This guide covers best practices, examples, and tips to ensure your product is presented in the best light. Check it out
+                  <a href="https://docs.galtea.ai/sdk/tutorials/create-product-description" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">here</a>
+                </p>
                 <br />
                 <h3 style="color: #333">General Improvements</h3>
                 <p style="color: #444; font-size: 16px">We've made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.</p>
