--- a/snippets/changelog/2025-08-04.html
+++ b/snippets/changelog/2025-08-04.html
@@ -18,7 +18,7 @@
                   </a>
                 </div>
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Unleash Deeper Insights with Custom & New Metrics</h1>
-                <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2024-05-21">2024-05-21</a>
+                <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-08-04">2025-08-04</a>
 
                 <br />
                 <h3 style="color: #333">Introducing Custom Metrics: Define Your Own Success</h3>
@@ -32,7 +32,7 @@
 
                 <br />
                 <h3 style="color: #333">Expanded Library of Built-in Metrics</h3>
-                <p style="color: #444; font-size: 16px">We've also expanded our library of classical metrics to give you more out-of-the-box evaluation power. This release includes:</p>
+                <p style="color: #444; font-size: 16px">We've also expanded our library of deterministic metrics to give you more out-of-the-box evaluation power. This release includes:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Text Similarity & Text Match:</strong> Measure semantic similarity or check for exact string matches.</li>
                   <li><strong>Spatial Match:</strong> Verify if generated locations fall within a defined area.</li>
@@ -42,7 +42,7 @@
                   <a href="https://docs.galtea.ai/metrics/overview" style="color: #5c5bdd">Explore all available metrics in our documentation</a>.
                 </p>
                 <div style="text-align: center; margin: 10px 0">
-                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2024-05-21_new-classical-metrics.png" alt="New classical metrics available" style="max-width: 100%; height: auto; border-radius: 8px" />
+                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-08-04_new-deterministic-metrics.png" alt="New deterministic metrics available" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
                 <br />
