--- a/snippets/changelog/2025-08-04.html
+++ b/snippets/changelog/2025-08-04.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galtea Update - 2024-05-21</title>
+    <title>Galtea Update - 2025-08-04</title>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -17,46 +17,44 @@
                     <img src="https://galtea.ai/img/galteaLogo.png" alt="Galtea Logo" style="width: 100px; height: auto" />
                   </a>
                 </div>
-                <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Unleash Deeper Insights with Custom & New Metrics</h1>
+                <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Custom Judges, New Metrics, and a UI Refresh</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-08-04">2025-08-04</a>
 
                 <br />
-                <h3 style="color: #333">Introducing Custom Metrics: Define Your Own Success</h3>
+                <h3 style="color: #333">Create Custom Judges via Your Own Prompts</h3>
                 <p style="color: #444; font-size: 16px">
-                  You can now create fully customized evaluation metrics using natural language prompts. This powerful feature empowers you to define precisely what "good" looks like for your specific use case, going beyond standard metrics to test for nuanced behaviors, specific formats, or brand voice compliance.
-                  <a href="https://docs.galtea.ai/metrics/custom-metrics" style="color: #5c5bdd">Learn how to create your own</a>.
+                  You can now define <strong>Custom Judge</strong> metrics by crafting your own evaluation prompts during metric creation. This allows you to encode domain-specific rubrics, product constraints, or behavioral guidelines directly into the metric—giving you precise control over how LLM outputs are assessed. Simply write your prompt, specify the scoring logic, and Galtea will use LLM-as-a-judge techniques to evaluate outputs according to your standards.
                 </p>
                 <div style="text-align: center; margin: 10px 0">
-                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2024-05-21_custom-metrics.png" alt="Creating a custom metric with a prompt" style="max-width: 100%; height: auto; border-radius: 8px" />
+                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-08-04_custom_judge.png" alt="Creating a custom judge metric" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
                 <br />
-                <h3 style="color: #333">Expanded Library of Built-in Metrics</h3>
-                <p style="color: #444; font-size: 16px">We've also expanded our library of deterministic metrics to give you more out-of-the-box evaluation power. This release includes:</p>
+                <h3 style="color: #333">New Deterministic Metrics</h3>
+                <p style="color: #444; font-size: 16px">Four new deterministic metrics are now available, perfect for scenarios requiring rule-based scoring:</p>
                 <ul style="color: #444; font-size: 16px">
-                  <li><strong>Text Similarity & Text Match:</strong> Measure semantic similarity or check for exact string matches.</li>
-                  <li><strong>Spatial Match:</strong> Verify if generated locations fall within a defined area.</li>
-                  <li><strong>Intersection over Union (IoU):</strong> A crucial metric for object detection and computer vision tasks.</li>
+                  <li><strong>Text Similarity:</strong> Quantifies text resemblance using character-level fuzzy matching.</li>
+                  <li><strong>Text Match:</strong> Returns pass/fail based on similarity to a reference string.</li>
+                  <li><strong>Spatial Match:</strong> Verifies box alignment with IoU scoring for a pass/fail result.</li>
+                  <li><strong>IoU (Intersection over Union):</strong> Computes the overlap ratio between predicted and reference boxes.</li>
                 </ul>
-                <p style="color: #444; font-size: 16px">
-                  <a href="https://docs.galtea.ai/metrics/overview" style="color: #5c5bdd">Explore all available metrics in our documentation</a>.
-                </p>
-                <div style="text-align: center; margin: 10px 0">
-                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-08-04_new-deterministic-metrics.png" alt="New deterministic metrics available" style="max-width: 100%; height: auto; border-radius: 8px" />
-                </div>
 
                 <br />
-                <p style="color: #444; font-size: 16px">Enjoy the new level of evaluation depth!</p>
+                <h3 style="color: #333">Dashboard Redesign: Second Iteration</h3>
+                <p style="color: #444; font-size: 16px">We've launched the second iteration of our redesigned dashboard with a refreshed visual language focused on clarity and usability. Key improvements include:</p>
+                <ul style="color: #444; font-size: 16px">
+                    <li><strong>Modern Forms:</strong> Forms have been modernized to provide a more intuitive and visually appealing user experience, giving a more professional look to the Dashboard.</li>
+                </ul>
+                <div style="text-align: center; margin: 10px 0">
+                  <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-08-04_dashboard-redesign.png" alt="Redesigned Dashboard with Modern Forms" style="max-width: 100%; height: auto; border-radius: 8px" />
+                </div>
+                <p style="color: #444; font-size: 16px">This redesign represents our commitment to delivering a more intuitive and visually appealing user experience.</p>
+
+                <br />
+                <p style="color: #444; font-size: 16px">Enjoy the improvements!</p>
                 <p style="color: #444; font-size: 16px"><strong>We'd love to hear your thoughts</strong> on these new features. Just reply to this email or ping us in the Slack/Discord channel.</p>
 
                 <hr style="margin-top: 40px; width: 20%; border: 1px solid #d1d3db" />
-
-                <h3 style="color: #333; margin-top: 40px">Coming Next</h3>
-                <p style="color: #444; font-size: 16px">We’re not stopping here! Soon you’ll see new major capabilities being added to the platform:</p>
-                <ul style="color: #444; font-size: 16px">
-                  <li><strong>Synthetic User-Scenario Generation:</strong> Automatically create diverse and realistic test cases from user scenarios.</li>
-                  <li><strong>Simplified Custom SDKs:</strong> An easier, more intuitive way to use custom metrics and scores directly via the SDK.</li>
-                </ul>
                 <p style="margin-top: 35px; color: #444; font-size: 16px">Stay tuned!</p>
                 <p style="margin-left: 35px"><strong> - Galtea Team</strong></p>
               </td>
@@ -67,3 +65,11 @@
     </table>
   </body>
 </html>
+---
+
+### Images to Upload
+
+You will need to create and upload the following images to your server:
+
+1.  **Screenshot of the UI for creating a "Custom Judge" metric, showing the prompt input field.**
+    *   Path: `/images/changelog/2025-08-04_custom-judge.png`
