Remove alt attribute from Galtea logo images
The alt attribute was removed from the Galtea logo <img> tags in the 2025-08-04 and 2025-08-11 changelog HTML files for consistency or design reasons.

--- a/snippets/changelog/2025-08-11.html
+++ b/snippets/changelog/2025-08-11.html
@@ -14,7 +14,7 @@
               <td>
                 <div style="text-align: center; margin-top: 20px">
                   <a href="https://galtea.ai" target="_blank">
-                    <img src="https://galtea.ai/img/galteaLogo.png" alt="Galtea Logo" style="width: 100px; height: auto" />
+                    <img src="https://galtea.ai/img/galteaLogo.png" style="width: 100px; height: auto" />
                   </a>
                 </div>
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Dashboard Enhancements: TestCase Management, Judge Templates, and System Resilience</h1>
