--- a/snippets/changelog/2025-09-01.html
+++ b/snippets/changelog/2025-09-01.html
@@ -15,12 +15,12 @@
           <table role="presentation" cellspacing="0" cellpadding="0" border="0" style="background-color: #f9f8f4; text-align: left; margin: 20px; padding: 20px; border: 1px solid #e4e4e7; border-radius: 10px; max-width: 600px">
             <tr>
               <td>
-                <div style="text-align: center; margin-top: 20px">
+                <div style="text-align: center">
                   <a href="https://galtea.ai" target="_blank">
-                    <img src="https://galtea.ai/img/galtea_mod.png" style="width: 100px; height: auto" />
+                    <img src="https://galtea.ai/img/galtea_mod.png" style="width: 250px; height: auto" />
                   </a>
                 </div>
-                <h1 style="color: #171717; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Galtea Rebranding, Enhanced Analytics, and Platform Security</h1>
+                <h1 style="color: #171717; font-size: 26px; margin-bottom: 0px">Galtea Rebranding, Enhanced Analytics, and Platform Security</h1>
                 <a style="color: #5286ff; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-09-01">2025-09-01</a>
 
                 <br />
