Add 2025-09-15 changelog and update formatting rules
Added new changelog entries for 2025-09-15 in both MDX and HTML formats, covering test case confidence scores, custom judges for conversations, metric creation improvements, and conversation simulator enhancements. Updated changelog.mdx to include the new entry. Improved changelog_prompt.md with explicit formatting instructions for inline code in MDX and HTML files.

--- a/snippets/changelog/2025-07-14.html
+++ b/snippets/changelog/2025-07-14.html
@@ -43,8 +43,8 @@
                 <br />
                 <h3 style="color: #333">Streamlined Conversation Logging with OpenAI-Aligned Format</h3>
                 <p style="color: #444; font-size: 16px">
-                  Logging entire conversations is now easier. We've aligned our <a href="https://docs.galtea.ai/sdk/api/inference-result/create-batch" style="color: #5c5bdd">batch creation method</a> with OpenAI's `messages` format (using role/content pairs), simplifying how you send multi-turn data
-                  to Galtea.
+                  Logging entire conversations is now easier. We've aligned our <a href="https://docs.galtea.ai/sdk/api/inference-result/create-batch" style="color: #5c5bdd">batch creation method</a> with OpenAI's
+                  <code style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444">messages</code> format (using role/content pairs), simplifying how you send multi-turn data to Galtea.
                 </p>
 
                 <br />
