Remove evaluation concept and update references to sessions
Deprecated the evaluation concept and related SDK/API documentation, replacing it with session-based evaluation tasks throughout the docs. Updated links, code examples, and UI references to focus on sessions and evaluation tasks as the primary workflow elements. Renamed files and cards, removed evaluation service and related snippets, and clarified the implicit creation of sessions for evaluation tasks.

--- a/snippets/changelog/2025-06-16.html
+++ b/snippets/changelog/2025-06-16.html
@@ -32,13 +32,13 @@
                 <ul style="color: #444; font-size: 16px">
                   <li>
                     <strong>Reorganized <a href="https://docs.galtea.ai/concepts/product/version" style="color: #5c5bdd">Version</a>, <a href="https://docs.galtea.ai/concepts/product/test" style="color: #5c5bdd">Test</a>, and
-                    <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation/task" style="color: #5c5bdd">Evaluation Task</a> Views:</strong> Detailed views have been streamlined and improved for clearer insights.
+                    <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation-task" style="color: #5c5bdd">Evaluation Task</a> Views:</strong> Detailed views have been streamlined and improved for clearer insights.
                   </li>
                   <li>
                     <strong>New <a href="https://docs.galtea.ai/concepts/product/version/session" style="color: #5c5bdd">Sessions</a> Visualizations:</strong> Easily organize and navigate conversations through our new Sessions feature.
                   </li>
                   <li>
-                    <strong><a href="https://docs.galtea.ai/concepts/product/version/session/evaluation" style="color: #5c5bdd">Evaluations</a> Visualization Removed:</strong> The dashboard now focuses on <strong>Sessions</strong> and <strong>Evaluation Tasks</strong> as the primary elements.
+                    <strong>Evaluations Visualization Removed:</strong> The dashboard now focuses on <strong>Sessions</strong> and <strong>Evaluation Tasks</strong> as the primary elements.
                   </li>
                   <li><strong>Better Filters Across Tables:</strong> Quickly find what you need with improved filtering capabilities on the dashboard.</li>
                   <li><strong>General Bug Fixes & UX Improvements:</strong> Enjoy smoother interactions, clearer tooltips, and more intuitive code snippets.</li>
@@ -52,7 +52,7 @@
                 </p>
                 <ul style="color: #444; font-size: 16px">
                   <li>
-                    <strong>Implicit Evaluation Creation:</strong> No need to explicitly call <i>galtea.evaluations.create()</i>—it happens automatically.
+                    <strong>Implicit Session Creation:</strong> Sessions are created automatically when needed for evaluation tasks.
                   </li>
                   <li>
                     <strong
