--- a/snippets/changelog/2025-09-22.html
+++ b/snippets/changelog/2025-09-22.html
@@ -27,7 +27,7 @@
                 <h3 style="color: #171717">Consistent Sorting and Enhanced Navigation</h3>
                 <p style="color: #171717; font-size: 16px">
                   We've made significant usability improvements to the platform. Table sorting is now persistent, so you can navigate away or refresh the page and your chosen sort order will remain. Additionally, navigating from an
-                  <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation/task" style="color: #5286ff">Evaluation Task</a> is easier than ever—simply right-click to jump to the related Test Case, Session, or Evaluation.
+                  <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation-task" style="color: #5286ff">Evaluation Task</a> is easier than ever—simply right-click to jump to the related Test Case or Session.
                 </p>
                 <div style="text-align: center; margin: 10px 0">
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-09-22_evaluation-task-navigation.png" alt="Right-click navigation from the Evaluation Task table" style="max-width: 100%; height: auto; border-radius: 8px" />
