Rename 'metric-type' and 'evaluation-task' to 'metric' and 'evaluation'
All references, files, and links for 'metric-type' and 'evaluation-task' have been renamed to 'metric' and 'evaluation' respectively across concepts, SDK, snippets, images, and documentation. This update standardizes terminology throughout the codebase and documentation for improved clarity and consistency.

--- a/snippets/changelog/2025-05-12.html
+++ b/snippets/changelog/2025-05-12.html
@@ -56,7 +56,7 @@
                 <p style="color: #444; font-size: 16px">We've made several improvements to help you work more efficiently:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Reduced Clutter in Analytics Filters:</strong> Tests and Versions filtering now only display elements that have been used in an evaluation</li>
-                  <li><strong>Streamlined Task Navigation:</strong> Clicking the "input" cell in the evaluation tasks table now navigates directly to the associated Test Case</li>
+                  <li><strong>Streamlined Navigation:</strong> Clicking the "input" cell in the evaluations table now navigates directly to the associated Test Case</li>
                 </ul>
 
                 <br />
