--- a/snippets/changelog/2025-05-19.html
+++ b/snippets/changelog/2025-05-19.html
@@ -23,7 +23,7 @@
                 <br />
                 <h3 style="color: #333">Streamlined Onboarding and Quicker Starts</h3>
                 <p style="color: #444; font-size: 16px">
-                  We've revamped the platform onboarding! It's now more visually intuitive and to help new users get evaluating in no time, we now provide a default <a href="https://docs.galtea.ai/concepts/metric-type" style="color: #5c5bdd; text-decoration: underline">Metric</a> and a default
+                  We've revamped the platform onboarding! It's now more visually intuitive and to help new users get evaluating in no time, we now provide a default <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd; text-decoration: underline">Metric</a> and a default
                   <a href="https://docs.galtea.ai/concepts/product/test" style="color: #5c5bdd; text-decoration: underline">Test</a>. This makes it easier than ever to get started with Galtea and run your first evaluation quickly.
                 </p>
 
