--- a/snippets/changelog/2025-07-21.html
+++ b/snippets/changelog/2025-07-21.html
@@ -31,8 +31,8 @@
                 <br />
                 <h3 style="color: #333">New Red Teaming Metric: Data Leakage</h3>
                 <p style="color: #444; font-size: 16px">
-                  We've added the <strong><a href="https://docs.galtea.ai/concepts/metric-type/data-leakage" style="color: #5c5bdd">Data Leakage</a></strong> metric to our suite of Red Teaming evaluations. This metric assesses whether your LLM returns content that could contain sensitive
-                  information, such as PII, financial data, or proprietary business data. It is crucial for ensuring your applications are secure and privacy-compliant.
+                  We've added the <strong><a href="https://docs.galtea.ai/concepts/metric/data-leakage" style="color: #5c5bdd">Data Leakage</a></strong> metric to our suite of Red Teaming evaluations. This metric assesses whether your LLM returns content that could contain sensitive information,
+                  such as PII, financial data, or proprietary business data. It is crucial for ensuring your applications are secure and privacy-compliant.
                 </p>
 
                 <br />
@@ -40,8 +40,7 @@
                 <p style="color: #444; font-size: 16px">We've rolled out several improvements to make metric creation and management more powerful and intuitive:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li>
-                    <strong>Link Metrics to Specific Models:</strong> You can now associate a <a href="https://docs.galtea.ai/concepts/metric-type" style="color: #5c5bdd">Metric Type</a> with a specific evaluator model (e.g., "GPT-4.1") to ensure consistency and use specialized models for certain
-                    metrics.
+                    <strong>Link Metrics to Specific Models:</strong> You can now associate a <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd">Metric</a> with a specific evaluator model (e.g., "GPT-4.1") to ensure consistency and use specialized models for certain metrics.
                   </li>
                   <li>
                     <strong>Simplified Custom Scoring:</strong> We've introduced a more streamlined method for defining your own deterministic metrics, making it easier to integrate your custom, rule-based logic into the Galtea workflow. See our
@@ -51,7 +50,7 @@
 
                 <br />
                 <h3 style="color: #333">Support for Larger Inputs and Outputs</h3>
-                <p style="color: #444; font-size: 16px">To better support applications that handle large documents or complex queries, we have increased the maximum character size for evaluation task inputs and outputs to 250,000 characters.</p>
+                <p style="color: #444; font-size: 16px">To better support applications that handle large documents or complex queries, we have increased the maximum character size for evaluation inputs and outputs to 250,000 characters.</p>
 
                 <br />
                 <p style="color: #444; font-size: 16px">Enjoy the improvements!</p>
