--- a/snippets/changelog/2025-07-28.html
+++ b/snippets/changelog/2025-07-28.html
@@ -24,7 +24,7 @@
                 <h3 style="color: #333">Expanded Evaluator Model Support</h3>
                 <p style="color: #444; font-size: 16px">
                   We've added support for more evaluator models: <strong>Gemini-2.5-Flash</strong>, <strong>Gemini-2.5-Flash-Lite</strong>, and <strong>Gemini-2.0-Flash</strong>. You can now
-                  <a href="https://docs.galtea.ai/concepts/metric-type" style="color: #5c5bdd">link these models to specific Metric Types</a> for consistent evaluation results and leverage specialized models for different scenarios.
+                  <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd">link these models to specific Metrics</a> for consistent evaluation results and leverage specialized models for different scenarios.
                 </p>
 
                 <br />
@@ -40,20 +40,20 @@
                 <p style="color: #444; font-size: 16px">We've expanded our metric library with three essential deterministic metrics:</p>
                 <ul style="color: #444; font-size: 16px">
                   <li>
-                    <strong><a href="https://docs.galtea.ai/concepts/metric-type/bleu" style="color: #5c5bdd">BLEU</a>:</strong> Measures n-gram overlap for machine translation and constrained generation tasks.
+                    <strong><a href="https://docs.galtea.ai/concepts/metric/bleu" style="color: #5c5bdd">BLEU</a>:</strong> Measures n-gram overlap for machine translation and constrained generation tasks.
                   </li>
                   <li>
-                    <strong><a href="https://docs.galtea.ai/concepts/metric-type/rouge" style="color: #5c5bdd">ROUGE</a>:</strong> Evaluates summarization quality by measuring longest common subsequences.
+                    <strong><a href="https://docs.galtea.ai/concepts/metric/rouge" style="color: #5c5bdd">ROUGE</a>:</strong> Evaluates summarization quality by measuring longest common subsequences.
                   </li>
                   <li>
-                    <strong><a href="https://docs.galtea.ai/concepts/metric-type/meteor" style="color: #5c5bdd">METEOR</a>:</strong> Assesses translation and paraphrasing using exact matches, stems, and synonyms.
+                    <strong><a href="https://docs.galtea.ai/concepts/metric/meteor" style="color: #5c5bdd">METEOR</a>:</strong> Assesses translation and paraphrasing using exact matches, stems, and synonyms.
                   </li>
                 </ul>
 
                 <br />
                 <h3 style="color: #333">Enhanced Red Teaming with Jailbreak Resilience v2</h3>
                 <p style="color: #444; font-size: 16px">
-                  Security testing gets an upgrade with <strong><a href="https://docs.galtea.ai/concepts/metric-type/jailbreak-resilience-v2" style="color: #5c5bdd">Jailbreak Resilience v2</a></strong
+                  Security testing gets an upgrade with <strong><a href="https://docs.galtea.ai/concepts/metric/jailbreak-resilience-v2" style="color: #5c5bdd">Jailbreak Resilience v2</a></strong
                   >, an improved version of our jailbreak resistance metric that provides more comprehensive assessment of your model's ability to resist adversarial prompts and maintain safety boundaries.
                 </p>
 
