--- a/snippets/changelog/2025-09-15.html
+++ b/snippets/changelog/2025-09-15.html
@@ -32,7 +32,7 @@
                 <br />
                 <h3 style="color: #171717">Simplified and More Flexible Metric Creation</h3>
                 <p style="color: #171717; font-size: 16px">
-                  Creating <a href="https://docs.galtea.ai/concepts/metric-type" style="color: #5286ff">Metric Types</a> is now more intuitive. Metrics are now directly linked to a specific test type (<code
+                  Creating <a href="https://docs.galtea.ai/concepts/metric" style="color: #5286ff">Metrics</a> is now more intuitive. Metrics are now directly linked to a specific test type (<code
                     style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444"
                     >QUALITY</code
                   >, <code style="background-color: #ececec; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace; font-size: 14px; color: #444">RED_TEAMING</code>, or
@@ -43,7 +43,7 @@
                 <br />
                 <h3 style="color: #171717">Custom Judges for Conversational Evaluation</h3>
                 <p style="color: #171717; font-size: 16px">
-                  You can now create your own <a href="https://docs.galtea.ai/concepts/metric-type/custom-judge" style="color: #5286ff">Custom Judges</a> specifically for evaluating multi-turn conversations. This allows you to define complex evaluation logic to assess nuanced aspects like task
+                  You can now create your own <a href="https://docs.galtea.ai/concepts/metric/custom-judge" style="color: #5286ff">Custom Judges</a> specifically for evaluating multi-turn conversations. This allows you to define complex evaluation logic to assess nuanced aspects like task
                   completion, context retention, and persona adherence across an entire dialogue.
                 </p>
 
