--- a/snippets/changelog/2025-06-16.html
+++ b/snippets/changelog/2025-06-16.html
@@ -32,7 +32,7 @@
                 <ul style="color: #444; font-size: 16px">
                   <li>
                     <strong>Reorganized <a href="https://docs.galtea.ai/concepts/product/version" style="color: #5c5bdd">Version</a>, <a href="https://docs.galtea.ai/concepts/product/test" style="color: #5c5bdd">Test</a>, and
-                    <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation-task" style="color: #5c5bdd">Evaluation Task</a> Views:</strong> Detailed views have been streamlined and improved for clearer insights.
+                    <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation" style="color: #5c5bdd">Evaluation</a> Views:</strong> Detailed views have been streamlined and improved for clearer insights.
                   </li>
                   <li>
                     <strong>New <a href="https://docs.galtea.ai/concepts/product/version/session" style="color: #5c5bdd">Sessions</a> Visualizations:</strong> Easily organize and navigate conversations through our new Sessions feature.
@@ -56,12 +56,12 @@
                   </li>
                   <li>
                     <strong
-                      >Repurposed <a href="https://docs.galtea.ai/sdk/api/evaluation-task/create" style="color: #5c5bdd">evaluation_tasks.create()</a>:</strong
+                      >Repurposed <a href="https://docs.galtea.ai/sdk/api/evaluation/create" style="color: #5c5bdd">evaluations.create()</a>:</strong
                     >
                     The old method is replaced by <i>create_single_turn()</i> for test-based evaluations, while <i>create()</i> now exclusively handles <a href="https://docs.galtea.ai/sdk/api/session" style="color: #5c5bdd">session-based</a> evaluations.
                   </li>
                   <li>
-                    <strong>New <a href="https://docs.galtea.ai/sdk/api/evaluation-task/create-single-turn" style="color: #5c5bdd">evaluation_tasks.create_single_turn()</a> Method:</strong> Use this for single-turn <a href="https://docs.galtea.ai/sdk/api/test-case" style="color: #5c5bdd">test cases</a>. It now requires <i>version_id</i> instead of <i>evaluation_id</i>.
+                    <strong>New <a href="https://docs.galtea.ai/sdk/api/evaluation/create-single-turn" style="color: #5c5bdd">evaluations.create_single_turn()</a> Method:</strong> Use this for single-turn <a href="https://docs.galtea.ai/sdk/api/test-case" style="color: #5c5bdd">test cases</a>. It now requires <i>version_id</i> instead of <i>evaluation_id</i>.
                   </li>
                   <li>
                     <strong>Simplified <a href="https://docs.galtea.ai/sdk/api/version/create" style="color: #5c5bdd">Version Creation</a>:</strong> The <i>galtea.versions.create()</i> method now accepts all properties directly, no need for an <i>optional_props</i> dictionary.
